# qwde

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle.kts  default.nix  gradle.properties  pom.xml  settings.gradle.kts
analytics/: build.gradle.kts
analytics/src/main/java/qwde/analytics/: IndexEstimator.java
analytics/src/main/java/qwde/analytics/aggregate/: Covariance.java  JensensAlpha.java  MovingAverage.java  Portfolio.java  StandardDeviation.java  StockOverview.java  Variance.java
analytics/src/main/java/qwde/analytics/db/: StockDB.java
analytics/src/main/java/qwde/analytics/ml/: LinearRegression.java  MovingAverage.java
analytics/src/test/java/qwde/analytics/aggregate/: PortfolioTest.java  StandardDeviationTest.java  Variance.java
analytics/src/test/java/qwde/analytics/ml/: LinearRegressionTest.java
config/spotbugs/: exclude.xml
dataprovider/: .checkstyle  build.gradle.kts
dataprovider/src/main/java/qwde/dataprovider/db/: DatabaseManager.java  StockDB.java
dataprovider/src/main/java/qwde/dataprovider/kafka/: InMemoryKafkaStore.java
dataprovider/src/main/java/qwde/dataprovider/models/: CompanyStockData.java  IStockTicker.java  StockPrice.java  StockTicker.java
dataprovider/src/main/java/qwde/dataprovider/pystock/: App.java  PystockDataReader.java  PystockSelection.java  PystockStockPrice.java  PystockStockPriceReader.java  PystockToDB.java
dataprovider/src/main/java/qwde/dataprovider/util/: DateUtil.java  FileUtil.java  StockPriceReader.java
dataprovider/src/main/resources/: application.yml  logback.xml
dataprovider/src/main/resources/db/migration/: V1__create_tables.sql
dataprovider/src/test/java/qwde/dataprovider/kafka/: KafkaTest.java
dataprovider/src/test/java/qwde/dataprovider/pystock/: PystockDataReaderTest.java  PystockStockPriceReaderTest.java
gradle/config/checkstyle/: checkstyle.xml
gradle/config/pmd/: pmd.xml
main/: build.gradle.kts  pom.xml
main/configuration/: qwde-webserver.service  reloadQwde.sh  webhook.service
main/src/main/java/qwde/: App.java
main/src/main/java/qwde/plotly/: LinePlotRenderer.java
main/src/main/java/qwde/servlets/: IndexServlet.java  SharkToothServlet.java
main/src/main/java/qwde/web/: HttpServer.java
main/tools/: logback.xml
qwde/: .checkstyle  .classpath  .project  build.gradle.kts  pom.xml
qwde.pystock/: .classpath  .project  build.gradle.kts  pom.xml
qwde.pystock/src/main/java/qwde/: App.java
qwde.pystock/src/main/java/qwde/pystock/: PystockSelection.java  PystockStockPrice.java  PystockStockPriceReader.java
qwde.pystock/src/main/java/qwdepystock/db/: DatabaseManager.java
qwde.pystock/src/main/java/qwdepystock/models/: CompanyStockData.java  StockPrice.java  StockTicker.java
qwde.pystock/src/main/java/qwdepystock/pystock/: App.java  PystockSelection.java  PystockStockPrice.java  PystockStockPriceReader.java  PystockToDB.java
qwde.pystock/src/main/java/qwdepystock/util/: DateUtil.java  FileUtil.java  StockPriceReader.java
qwde.pystock/src/main/resources/: database.properties
qwde.pystock/src/main/resources/db/migration/: V1__create_tables.sql
qwde.pystock/src/test/java/qwde/pystock/test/: PystockStockPriceReaderTest.java
qwde.pystock/src/test/java/qwdepystock/test/: PystockStockPriceReaderTest.java
qwde.pystock/tools/: logback.xml
qwde/src/main/java/qwde/db/: StockDB.java
qwde/src/main/java/qwde/ml/: LinearRegression.java  MovingAverage.java
qwde/src/main/java/qwde/models/: StockPrice.java
qwde/src/main/java/qwde/util/: StockPriceReader.java
qwde/src/main/resources/: linear-train.arff
qwde/src/main/resources/qwde.ml/: linear-prediction.arff
qwde/src/test/java/qwde/ml/test/: LinearRegressionTest.java
qwde/src/test/java/qwde/mlTest/: LinearRegressionTest.java
qwde/src/test/resources/qwde.mlTest/: linear-test.arff
tools/: checkstyle-checks.xml
trading/: build.gradle.kts
trading/src/main/java/qwde/trading/aggregate/: AggregatesComputer.java
trading/src/main/java/qwde/trading/engine/: TradeEngine.java
trading/src/main/java/qwde/trading/model/: MarketOrder.java  Order.java  Summary.java  Trade.java  TradeType.java
trading/src/main/qwde/trading/engine/: TradeEngine.java
trading/src/main/qwde/trading/model/: MarketOrder.java  Order.java  Trade.java  TradeType.java
trading/src/main/qwde/trading/realtime/algorithm/: BuyLowSellHigh.java
trading/src/main/resources/: logback.xml
web/: build.gradle.kts  test.html
web/configuration/: distributeConfigurationFiles.sh  hooks.json  proxy.conf  qwde-blog.service  qwde-frontend.service  qwde-webserver.service  qwde.no.conf  reloadQwde.sh  runFrontend.sh  runWeb.sh  visudoEntries.txt  webhook.service
web/src/main/java/qwde/web/: App.java
web/src/main/java/qwde/web/http/: HttpServer.java
web/src/main/java/qwde/web/models/: StockStatistics.java
web/src/main/java/qwde/web/plotly/: FigureTemplate.java  LinePlotRenderer.java  PageRenderer.java
web/src/main/java/qwde/web/servlets/: BollingerBrand.java  BollingerBrand2.java  GenericNon200HttpHandler.java  Index.java  IndexServlet.java  NotFound.java  Portfolio.java  Portfolio2.java  Random.java  Random2.java  SharkToothServlet.java  SimpleMovingAverage.java  SimpleMovingAverage2.java  StockOverview.java  StockStatistics.java  (+1 more)
web/src/main/resources/: application.yml  errorpage.ftl  graphpage.ftl  index.ftl  logback.xml  notfound.ftl  portfolio.ftl  statisticspage.ftl
web/tools/: logback.xml
webby/: .gitignore  README.md  build.sh  build_localhost.sh  default.nix  qwde-web.cabal  release.nix  shell.nix  test_server.py  webby.cabal
webby/client/: API.hs  Main.hs
webby/qwdeclient/: Main.hs  qwdeclient.cabal
webby/qwdeserver/: Main.hs  qwdeserver.cabal
webby/qwdeshared/: Common.hs  Touch.hs  qwdeshared.cabal
webby/qwdeutil/: qwdeutil.cabal
webby/qwdeutil/Data/Graph/: Plotter.hs
webby/qwdeutil/Test/: TestMain.hs
webby/qwdeutil/Test/Data/Graph/: Plotter.hs
webby/server/: Main.hs  TestComponent.hs
webby/shared/: API.hs  Common.hs
webby/util/Data/Graph/: Plotter.hs
webby/util/Test/Data/Graph/: Plotter.hs
(+14 files in other folders)
