name:                qwde-web
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library shared
  exposed-modules:     Common
  hs-source-dirs: shared
  ghc-options:
    -O2 -threaded -Wall -rtsopts
  build-depends:
    base < 5,
    ghcjs-base,
    containers,
    miso,
    servant

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghc-options:
    -O2 -threaded -Wall -rtsopts
  hs-source-dirs:
    server
  build-depends:
    aeson,
    base < 5,
    containers,
    http-types,
    jsaddle-warp,
    lucid,
    miso,
    mtl,
    network-uri,
    servant,
    servant-lucid,
    servant-server,
    shared,
    text,
    wai,
    wai-app-static,
    wai-extra,
    warp
  default-language:
    Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghcjs-options:
    -dedupe -DGHCJS_GC_INTERVAL=5000
  hs-source-dirs:
    client
  build-depends:
    aeson,
    base < 5,
    containers,
    miso,
    servant,
    shared
  default-language:
    Haskell2010
