name:                qwde-web
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  other-modules:
    Common
  ghc-options:
    -O2 -threaded -Wall -rtsopts
  hs-source-dirs:
    server, shared
  build-depends:
    aeson,
    base < 5,
    containers,
    heredoc,
    http-types,
    jsaddle-warp,
    lucid,
    miso,
    mtl,
    network-uri,
    servant,
    servant-lucid,
    servant-server,
    text,
    wai,
    wai-app-static,
    wai-extra,
    warp
  default-language:
    Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  other-modules:
    Common
  ghcjs-options:
    -dedupe -DGHCJS_GC_INTERVAL=5000
  hs-source-dirs:
    client, shared
  build-depends:
    aeson,
    base < 5,
    containers,
    ghcjs-base,
    heredoc,
    lucid,
    miso,
    servant
  default-language:
    Haskell2010
