name:                qwde-web
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  other-modules:
    Common
  ghc-options:
    -O2 -threaded -Wall -rtsopts
  hs-source-dirs:
    server, shared
  build-depends:
    aeson,
    base < 5,
    containers,
    heredoc,
    http-types,
    jsaddle-warp,
    lens,
    lucid,
    miso,
    mtl,
    network-uri,
    servant,
    servant-lucid,
    servant-server,
    text,
    wai,
    wai-app-static,
    wai-extra,
    warp
  default-language:
    Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  other-modules:
    Common
  ghcjs-options:
    -dedupe -DGHCJS_GC_INTERVAL=5000
  hs-source-dirs:
    client, shared
  build-depends:
    aeson,
    base < 5,
    containers,
    ghcjs-base,
    heredoc,
    lens,
    lucid,
    miso,
    servant
  default-language:
    Haskell2010

library util
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghc-options:
    -O2 -Wall
  exposed-modules:
    
  hs-source-dirs:
    util
  build-depends:
    base < 5
    , containers
    , heredoc
  default-language:
    Haskell2010

test-suite Utiltest
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  type: exitcode-stdio-1.0
  other-modules:
    Test.Data.Graph.Plotter
  main-is:
   TestMain.hs 
  ghc-options:
    -O2 -threaded -Wall
  hs-source-dirs:
    util, util/Test
  build-depends:
    base < 5
    , containers
    , heredoc
    , HUnit
  default-language:
    Haskell2010
