name:                qwdeclient
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable qwdeclient
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghcjs-options:
    -dedupe -DGHCJS_GC_INTERVAL=5000 -Wall
  hs-source-dirs:
    .
  build-depends:
    base < 5
    , aeson
    , containers
    , ghcjs-base
    , heredoc
    , miso
    , qwdeshared
    , qwdeutil
    , random
  default-language:
    Haskell2010
