name:                qwdeserver
version:             0.1.0.0
synopsis:            http://qwde.no
description:         Website for viewing qwde code
homepage:            http://qwde.no
license:             GPL-3
license-file:        LICENSE
author:              Anders Sildnes
maintainer:          andsild@posteo.net
copyright:           Anders Sildnes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable qwdeserver
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  ghc-options:
    -O0 -threaded -Wall -rtsopts
  hs-source-dirs:
    .
  build-depends:
    aeson
    , base < 5
    , containers
    , heredoc
    , http-types
    , lens
    , lucid
    , miso
    , mtl
    , network-uri
    , servant
    , servant-lucid
    , servant-server
    , text
    , qwdeutil
    , qwdeshared
    , wai
    , wai-app-static
    , wai-extra
    , warp
  default-language:
    Haskell2010
